--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -4,12 +4,12 @@
       
       <form (ngSubmit)="onSubmit()" [formGroup]="RecipeEditForm">
         <div class="row d-flex justify-content-between align-items-center">
-          <div class="col-md-5">
-            <h2>{{ editMode ? 'Edit Recipe' : 'Create New Recipe' }}</h2>
+          <div class="col-md-7">
+            <h3>{{ editMode ? 'Edit Recipe' : 'Create New Recipe' }}</h3>
           </div>
           <div class="col-md-5">
             <button type="submit" class="btn btn-success mx-3" [disabled]="RecipeEditForm.invalid">{{ editMode ? 'Save' : 'Create' }}</button>
-            <button type="button" class="btn btn-secondary mx-3" (click)="cancelEdit()">Cancel</button>
+            <button type="button" class="btn btn-secondary " (click)="cancelEdit()">Cancel</button>
            
           </div>
           
