--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -7,7 +7,7 @@
         <a
           class="list-group-item"
           style="cursor: pointer"
-          *ngFor="let ingredient of ingredients; let i = index"
+          *ngFor="let ingredient of ingredients$ | async; let i = index"
           (click)="onEditIngredient(i)"
         >
           {{ ingredient.name }} ({{ ingredient.amount }})
