--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <button
       class="navbar-toggler"
@@ -7,7 +7,7 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a routerLink="/" class="navbar-brand">Recipe Book</a>
+    <a routerLink="/" class="navbar-brand">ITALIAN's Recipe Book</a>
     <div
       class="collapse navbar-collapse"
       [class.show]="!collapsed"
